--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,41 @@
   line-height: 24px;
   font-size: 14px;
 }
+
+@keyframes zoom {
+  0% {
+      font-size:14px;
+      transform:rotate(0);
+  }
+
+ 
+  50% {
+    font-size: 100px;
+   
+  }
+
+  100% {
+    font-size:14px;
+    transform: rotate(360deg);
+  }
+  
+
+}
+
+@keyframes zoom2 {
+  0% {
+     border: 0;
+  }
+
+ 
+  50% {
+   border: solid red 1px;
+   
+  }
+
+  100% {
+   border:0 ;
+  }
+  
+
+}
